added the entertainment and loneliness article

--- a/references.bib
+++ b/references.bib
@@ -135,6 +135,101 @@
   file = {/Users/jinko/Zotero/storage/4GK5EJBL/Bien et al. - 2012 - Role of Uropathogenic Escherichia coli Virulence F.pdf}
 }
 
+@article{brottMedicalManagementRevascularization2025,
+  title = {Medical {{Management}} and {{Revascularization}} for {{Asymptomatic Carotid Stenosis}}},
+  author = {Brott, Thomas G. and Howard, George and Lal, Brajesh K. and Voeks, Jenifer H. and Turan, Tanya N. and Roubin, Gary S. and Lazar, Ronald M. and Brown, Robert D. and Huston, John and Edwards, Lloyd J. and Jones, Michael and Clark, Wayne M. and Chamorro, {\'A}ngel and Llull, Laura and {Mena-Hurtado}, Carlos and Heck, Donald and Marshall, Randolph S. and Howard, Virginia J. and Moore, Wesley S. and Barrett, Kevin M. and Demaerschalk, Bart M. and Sangha, Navdeep and Aronow, Herbert and Foster, Malcolm and Sternbergh, W. Charles and Shawl, Fayaz and Lanzino, Giuseppe and Rapp, Joseph and Tran, Hoang S. and Ecker, Robert and Mackey, Ariane and Ali, Vaqar and Given, Curtis and Teal, Philip and Kashyap, Vikram S. and Mukherjee, Dipankar and Harrigan, Mark and Silverman, Scott and Koopmann, Matthew and Wadley, Virginia G. and Zhang, Yu and Rhodes, J. David and Chaturvedi, Seemant and Meschia, James F.},
+  year = 2025,
+  month = nov,
+  journal = {New England Journal of Medicine},
+  pages = {NEJMoa2508800},
+  issn = {0028-4793, 1533-4406},
+  doi = {10.1056/NEJMoa2508800},
+  urldate = {2026-01-14},
+  copyright = {http://www.nejmgroup.org/legal/terms-of-use.htm},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/X9WURV75/Brott et al. - 2025 - Medical Management and Revascularization for Asymptomatic Carotid Stenosis.pdf}
+}
+
+@article{brottMedicalManagementRevascularization2026,
+  title = {Medical {{Management}} and {{Revascularization}} for {{Asymptomatic Carotid Stenosis}}},
+  author = {Brott, Thomas G. and Howard, George and Lal, Brajesh K. and Voeks, Jenifer H. and Turan, Tanya N. and Roubin, Gary S. and Lazar, Ronald M. and Brown, Robert D. and Huston, John and Edwards, Lloyd J. and Jones, Michael and Clark, Wayne M. and Chamorro, {\'A}ngel and Llull, Laura and {Mena-Hurtado}, Carlos and Heck, Donald and Marshall, Randolph S. and Howard, Virginia J. and Moore, Wesley S. and Barrett, Kevin M. and Demaerschalk, Bart M. and Sangha, Navdeep and Aronow, Herbert and Foster, Malcolm and Sternbergh, W. Charles and Shawl, Fayaz and Lanzino, Giuseppe and Rapp, Joseph and Tran, Hoang S. and Ecker, Robert and Mackey, Ariane and Ali, Vaqar and Given, Curtis and Teal, Philip and Kashyap, Vikram S. and Mukherjee, Dipankar and Harrigan, Mark and Silverman, Scott and Koopmann, Matthew and Wadley, Virginia G. and Zhang, Yu and Rhodes, J. David and Chaturvedi, Seemant and Meschia, James F.},
+  year = 2026,
+  month = jan,
+  journal = {New England Journal of Medicine},
+  volume = {394},
+  number = {3},
+  pages = {219--231},
+  issn = {0028-4793, 1533-4406},
+  doi = {10.1056/NEJMoa2508800},
+  urldate = {2026-01-15},
+  copyright = {http://www.nejmgroup.org/legal/terms-of-use.htm},
+  langid = {english}
+}
+
+@article{brottMedicalManagementRevascularization2026a,
+  title = {Medical {{Management}} and {{Revascularization}} for {{Asymptomatic Carotid Stenosis}}},
+  author = {Brott, Thomas G. and Howard, George and Lal, Brajesh K. and Voeks, Jenifer H. and Turan, Tanya N. and Roubin, Gary S. and Lazar, Ronald M. and Brown, Robert D. and Huston, John and Edwards, Lloyd J. and Jones, Michael and Clark, Wayne M. and Chamorro, {\'A}ngel and Llull, Laura and {Mena-Hurtado}, Carlos and Heck, Donald and Marshall, Randolph S. and Howard, Virginia J. and Moore, Wesley S. and Barrett, Kevin M. and Demaerschalk, Bart M. and Sangha, Navdeep and Aronow, Herbert and Foster, Malcolm and Sternbergh, W. Charles and Shawl, Fayaz and Lanzino, Giuseppe and Rapp, Joseph and Tran, Hoang S. and Ecker, Robert and Mackey, Ariane and Ali, Vaqar and Given, Curtis and Teal, Philip and Kashyap, Vikram S. and Mukherjee, Dipankar and Harrigan, Mark and Silverman, Scott and Koopmann, Matthew and Wadley, Virginia G. and Zhang, Yu and Rhodes, J. David and Chaturvedi, Seemant and Meschia, James F.},
+  year = 2026,
+  month = jan,
+  journal = {New England Journal of Medicine},
+  volume = {394},
+  number = {3},
+  pages = {219--231},
+  publisher = {Massachusetts Medical Society},
+  issn = {0028-4793},
+  doi = {10.1056/NEJMoa2508800},
+  urldate = {2026-01-15},
+  abstract = {In high-grade asymptomatic carotid stenosis, addition of stenting to medical therapy led to a lower risk of stroke over a 4-year period. Endarterectomy did not lead to a significant benefit.}
+}
+
+@article{brottMedicalManagementRevascularization2026b,
+  title = {Medical {{Management}} and {{Revascularization}} for {{Asymptomatic Carotid Stenosis}}},
+  author = {Brott, Thomas G. and Howard, George and Lal, Brajesh K. and Voeks, Jenifer H. and Turan, Tanya N. and Roubin, Gary S. and Lazar, Ronald M. and Brown, Robert D. and Huston, John and Edwards, Lloyd J. and Jones, Michael and Clark, Wayne M. and Chamorro, {\'A}ngel and Llull, Laura and {Mena-Hurtado}, Carlos and Heck, Donald and Marshall, Randolph S. and Howard, Virginia J. and Moore, Wesley S. and Barrett, Kevin M. and Demaerschalk, Bart M. and Sangha, Navdeep and Aronow, Herbert and Foster, Malcolm and Sternbergh, W. Charles and Shawl, Fayaz and Lanzino, Giuseppe and Rapp, Joseph and Tran, Hoang S. and Ecker, Robert and Mackey, Ariane and Ali, Vaqar and Given, Curtis and Teal, Philip and Kashyap, Vikram S. and Mukherjee, Dipankar and Harrigan, Mark and Silverman, Scott and Koopmann, Matthew and Wadley, Virginia G. and Zhang, Yu and Rhodes, J. David and Chaturvedi, Seemant and Meschia, James F.},
+  year = 2026,
+  month = jan,
+  journal = {New England Journal of Medicine},
+  volume = {394},
+  number = {3},
+  pages = {219--231},
+  issn = {0028-4793, 1533-4406},
+  doi = {10.1056/NEJMoa2508800},
+  urldate = {2026-01-15},
+  copyright = {http://www.nejmgroup.org/legal/terms-of-use.htm},
+  langid = {english}
+}
+
+@article{brottMedicalManagementRevascularization2026c,
+  title = {Medical {{Management}} and {{Revascularization}} for {{Asymptomatic Carotid Stenosis}}},
+  author = {Brott, Thomas G. and Howard, George and Lal, Brajesh K. and Voeks, Jenifer H. and Turan, Tanya N. and Roubin, Gary S. and Lazar, Ronald M. and Brown, Robert D. and Huston, John and Edwards, Lloyd J. and Jones, Michael and Clark, Wayne M. and Chamorro, {\'A}ngel and Llull, Laura and {Mena-Hurtado}, Carlos and Heck, Donald and Marshall, Randolph S. and Howard, Virginia J. and Moore, Wesley S. and Barrett, Kevin M. and Demaerschalk, Bart M. and Sangha, Navdeep and Aronow, Herbert and Foster, Malcolm and Sternbergh, W. Charles and Shawl, Fayaz and Lanzino, Giuseppe and Rapp, Joseph and Tran, Hoang S. and Ecker, Robert and Mackey, Ariane and Ali, Vaqar and Given, Curtis and Teal, Philip and Kashyap, Vikram S. and Mukherjee, Dipankar and Harrigan, Mark and Silverman, Scott and Koopmann, Matthew and Wadley, Virginia G. and Zhang, Yu and Rhodes, J. David and Chaturvedi, Seemant and Meschia, James F.},
+  year = 2026,
+  month = jan,
+  journal = {New England Journal of Medicine},
+  volume = {394},
+  number = {3},
+  pages = {219--231},
+  publisher = {Massachusetts Medical Society},
+  issn = {0028-4793},
+  doi = {10.1056/NEJMoa2508800},
+  urldate = {2026-01-15},
+  abstract = {In high-grade asymptomatic carotid stenosis, addition of stenting to medical therapy led to a lower risk of stroke over a 4-year period. Endarterectomy did not lead to a significant benefit.}
+}
+
+@article{brottMedicalManagementRevascularization2026d,
+  title = {Medical {{Management}} and {{Revascularization}} for {{Asymptomatic Carotid Stenosis}}},
+  author = {Brott, Thomas G. and Howard, George and Lal, Brajesh K. and Voeks, Jenifer H. and Turan, Tanya N. and Roubin, Gary S. and Lazar, Ronald M. and Brown, Robert D. and Huston, John and Edwards, Lloyd J. and Jones, Michael and Clark, Wayne M. and Chamorro, {\'A}ngel and Llull, Laura and {Mena-Hurtado}, Carlos and Heck, Donald and Marshall, Randolph S. and Howard, Virginia J. and Moore, Wesley S. and Barrett, Kevin M. and Demaerschalk, Bart M. and Sangha, Navdeep and Aronow, Herbert and Foster, Malcolm and Sternbergh, W. Charles and Shawl, Fayaz and Lanzino, Giuseppe and Rapp, Joseph and Tran, Hoang S. and Ecker, Robert and Mackey, Ariane and Ali, Vaqar and Given, Curtis and Teal, Philip and Kashyap, Vikram S. and Mukherjee, Dipankar and Harrigan, Mark and Silverman, Scott and Koopmann, Matthew and Wadley, Virginia G. and Zhang, Yu and Rhodes, J. David and Chaturvedi, Seemant and Meschia, James F.},
+  year = 2026,
+  month = jan,
+  journal = {New England Journal of Medicine},
+  volume = {394},
+  number = {3},
+  pages = {219--231},
+  issn = {0028-4793, 1533-4406},
+  doi = {10.1056/NEJMoa2508800},
+  urldate = {2026-01-15},
+  copyright = {http://www.nejmgroup.org/legal/terms-of-use.htm},
+  langid = {english}
+}
+
 @article{bruTimelapseImagingBacterial2020,
   title = {Time-Lapse {{Imaging}} of {{Bacterial Swarms}} and the {{Collective Stress Response}}},
   author = {Bru, Jean-Louis and Siryaporn, Albert and {H{\o}yland-Kroghsbo}, Nina Molin},
@@ -249,6 +344,38 @@
   urldate = {2026-01-11},
   keywords = {Confidence intervals,Estimation methods,Physical therapy,Smallest worthwhile effect,Statistical inference},
   file = {/Users/jinko/Zotero/storage/LHPVKXYZ/Elkins - 2024 - Research Note Interpreting confidence intervals.pdf;/Users/jinko/Zotero/storage/BB37JRUB/S1836955324000869.html}
+}
+
+@article{elpidorouGoodBoredom2018,
+  title = {The Good of Boredom},
+  author = {Elpidorou, Andreas},
+  year = 2018,
+  month = apr,
+  journal = {Philosophical Psychology},
+  volume = {31},
+  number = {3},
+  pages = {323--351},
+  issn = {0951-5089, 1465-394X},
+  doi = {10.1080/09515089.2017.1346240},
+  urldate = {2026-01-15},
+  langid = {english}
+}
+
+@article{elpidorouGoodBoredom2018a,
+  title = {The Good of Boredom},
+  author = {Elpidorou, Andreas},
+  year = 2018,
+  month = apr,
+  journal = {Philosophical Psychology},
+  volume = {31},
+  number = {3},
+  pages = {323--351},
+  issn = {0951-5089, 1465-394X},
+  doi = {10.1080/09515089.2017.1346240},
+  urldate = {2026-01-15},
+  abstract = {I argue that the state of boredom (i.e., the transitory and nonpathological experience of boredom) should be understood to be a regulatory psychological state that has the capacity to promote our well-being by contributing to personal growth and to the construction (or reconstruction) of a meaningful life.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/IV9EZC3V/Elpidorou - 2018 - The good of boredom.pdf}
 }
 
 @article{ezratyCommercialLysogenyBroth2014,
@@ -405,6 +532,32 @@
   file = {/Users/jinko/Zotero/storage/THSZYTGZ/Gibson et al. - 2010 - Creation of a Bacterial Cell Controlled by a Chemically Synthesized Genome.pdf}
 }
 
+@book{gilbertHolocaustHumanTragedy2014,
+  title = {The {{Holocaust}}: {{The Human Tragedy}}},
+  shorttitle = {The {{Holocaust}}},
+  author = {Gilbert, Martin},
+  year = 2014,
+  publisher = {RosettaBooks},
+  address = {Newburyport},
+  abstract = {Intro -- Title Page -- Copyright -- Dedication -- Contents -- Acknowledgements -- Preface -- 1 First steps to iniquity -- 2 1933: the shadow of the swastika -- 3 Towards disinheritance -- 4 After the Nuremberg Laws -- 5 'Hunted like rats' -- 6 'The seeds of a terrible vengeance' -- 7 September 1939: the trapping of Polish Jewry -- 8 'Blood of innocents' -- 9 1940: 'a wave of evil' -- 10 War in the West: terror in the East -- 11 January-June 1941: the spreading net -- 12 'It cannot happen!' -- 13 'A crime without a name' -- 14 'Write and record!' -- 15 The 'final solution' -- 16 Eye-witness to mass murder -- 17 20 January 1942: the Wannsee Conference -- 18 'Journey into the unknown' -- 19 'Another journey into the unknown' -- 20 'If they have enough time, we are lost' -- 21 'Avenge our tormented people' -- 22 From Warsaw to Treblinka: 'these disastrous and horrible days' -- 23 Autumn 1942: 'at a faster pace' -- 24 'The most horrible of all horrors' -- 25 September-November 1942: the spread of resistance -- 26 'To save at least someone' -- 27 'Help me get more trains' -- 28 Warsaw, April 1943: hopeless days of revolt -- 29 'The crashing fires of hell' -- 30 'To perish, but with honour' -- 31 'A page of glory\dots{} never to be written' -- 32 'Do not think our spirit is broken' -- 33 'One should like so much to live a little bit longer' -- 34 From the occupation of Hungary to the Normandy landings -- 35 'May one cry now?' -- 36 July-September 1944: the last deportations -- 37 September 1944: the Days of Awe -- 38 Revolt at Birkenau -- 39 Protectors and persecutors -- 40 The death marches -- 41 The 'tainted luck' of survival -- EPILOGUE: 'I will tell the world' -- Notes and sources -- Index},
+  isbn = {978-0-7953-3719-2},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/ZNB7EKI6/Gilbert - 2014 - The Holocaust The Human Tragedy.epub}
+}
+
+@book{gilbertHolocaustHumanTragedy2014a,
+  title = {The {{Holocaust}}: {{The Human Tragedy}}},
+  shorttitle = {The {{Holocaust}}},
+  author = {Gilbert, Martin},
+  year = 2014,
+  publisher = {RosettaBooks},
+  address = {Newburyport},
+  abstract = {Intro -- Title Page -- Copyright -- Dedication -- Contents -- Acknowledgements -- Preface -- 1 First steps to iniquity -- 2 1933: the shadow of the swastika -- 3 Towards disinheritance -- 4 After the Nuremberg Laws -- 5 'Hunted like rats' -- 6 'The seeds of a terrible vengeance' -- 7 September 1939: the trapping of Polish Jewry -- 8 'Blood of innocents' -- 9 1940: 'a wave of evil' -- 10 War in the West: terror in the East -- 11 January-June 1941: the spreading net -- 12 'It cannot happen!' -- 13 'A crime without a name' -- 14 'Write and record!' -- 15 The 'final solution' -- 16 Eye-witness to mass murder -- 17 20 January 1942: the Wannsee Conference -- 18 'Journey into the unknown' -- 19 'Another journey into the unknown' -- 20 'If they have enough time, we are lost' -- 21 'Avenge our tormented people' -- 22 From Warsaw to Treblinka: 'these disastrous and horrible days' -- 23 Autumn 1942: 'at a faster pace' -- 24 'The most horrible of all horrors' -- 25 September-November 1942: the spread of resistance -- 26 'To save at least someone' -- 27 'Help me get more trains' -- 28 Warsaw, April 1943: hopeless days of revolt -- 29 'The crashing fires of hell' -- 30 'To perish, but with honour' -- 31 'A page of glory\dots{} never to be written' -- 32 'Do not think our spirit is broken' -- 33 'One should like so much to live a little bit longer' -- 34 From the occupation of Hungary to the Normandy landings -- 35 'May one cry now?' -- 36 July-September 1944: the last deportations -- 37 September 1944: the Days of Awe -- 38 Revolt at Birkenau -- 39 Protectors and persecutors -- 40 The death marches -- 41 The 'tainted luck' of survival -- EPILOGUE: 'I will tell the world' -- Notes and sources -- Index},
+  isbn = {978-0-7953-3719-2},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/RUVUDEIE/Gilbert - 2014 - The Holocaust The Human Tragedy.epub}
+}
+
 @article{greenSignalsResilienceChange2021,
   title = {Signals of Resilience and Change in Tidepool Fish Communities on the {{Pacific}} Coast of {{Vancouver Island}}, {{Canada}}},
   author = {Green, John M. and Dunbrack, Robert L. and Bates, Amanda E.},
@@ -470,6 +623,33 @@
   isbn = {978-1-4160-4574-8 978-0-8089-2400-5},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/23CDSGC5/Hall et al. - 2011 - Guyton and Hall textbook of medical physiology Student consult. Activate at studentconsult.com. Sea.pdf}
+}
+
+@book{hanBurnoutSociety2015,
+  title = {The Burnout Society},
+  author = {Han, Byung-Chul and Butler, Erik},
+  year = 2015,
+  publisher = {Stanford Briefs, an imprint of Stanford University Press},
+  address = {Stanford, California},
+  isbn = {978-0-8047-9509-8},
+  langid = {english},
+  lccn = {BF482 .H35513 2015},
+  keywords = {Burn out (Psychology),Depression Mental,Mental fatigue,Social aspects},
+  file = {/Users/jinko/Zotero/storage/W9ZN44R3/Han and Butler - 2015 - The burnout society.epub}
+}
+
+@book{hanScentTimePhilosophical2017,
+  title = {The Scent of Time: A Philosophical Essay on the Art of Lingering},
+  shorttitle = {The Scent of Time},
+  author = {Han, Byung-Chul},
+  year = 2017,
+  edition = {English edition},
+  publisher = {Polity Press},
+  address = {Cambridge, UK},
+  isbn = {978-1-5095-1608-7},
+  langid = {english},
+  annotation = {OCLC: 993752413},
+  file = {/Users/jinko/Zotero/storage/ZME8D4U3/Han - 2017 - The scent of time a philosophical essay on the art of lingering.epub}
 }
 
 @article{hardenEducationalStrategiesCurriculum1984,
@@ -1173,6 +1353,23 @@
   file = {/Users/jinko/Zotero/storage/IQ8G7TIZ/O'Hagan - 2004 - Dicing with the Unknown.pdf}
 }
 
+@article{ophirCognitiveControlMedia2009,
+  title = {Cognitive Control in Media Multitaskers},
+  author = {Ophir, Eyal and Nass, Clifford and Wagner, Anthony D.},
+  year = 2009,
+  month = sep,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {106},
+  number = {37},
+  pages = {15583--15587},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.0903620106},
+  urldate = {2026-01-15},
+  abstract = {Chronic media multitasking is quickly becoming ubiquitous, although processing multiple incoming streams of information is considered a challenge for human cognition. A series of experiments addressed whether there are systematic differences in information processing styles between chronically heavy and light media multitaskers. A trait media multitasking index was developed to identify groups of heavy and light media multitaskers. These two groups were then compared along established cognitive control dimensions. Results showed that heavy media multitaskers are more susceptible to interference from irrelevant environmental stimuli and from irrelevant representations in memory. This led to the surprising result that heavy media multitaskers performed worse on a test of task-switching ability, likely due to reduced ability to filter out interference from the irrelevant task set. These results demonstrate that media multitasking, a rapidly growing societal trend, is associated with a distinct approach to fundamental information processing.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/S8YZGU3A/Ophir et al. - 2009 - Cognitive control in media multitaskers.pdf}
+}
+
 @article{otooleMicrotiterDishBiofilm2011,
   title = {Microtiter {{Dish Biofilm Formation Assay}}},
   author = {O'Toole, George A.},
@@ -1203,6 +1400,23 @@
   urldate = {2026-01-11},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/A9FDGKED/Prasad and Cifu - 2019 - The Necessity of Sham Controls.pdf}
+}
+
+@article{raichleDefaultModeBrain2001,
+  title = {A Default Mode of Brain Function},
+  author = {Raichle, Marcus E. and MacLeod, Ann Mary and Snyder, Abraham Z. and Powers, William J. and Gusnard, Debra A. and Shulman, Gordon L.},
+  year = 2001,
+  month = jan,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {98},
+  number = {2},
+  pages = {676--682},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.98.2.676},
+  urldate = {2026-01-15},
+  abstract = {A baseline or control state is fundamental to the understanding of  most complex systems. Defining a baseline state in the human brain,  arguably our most complex system, poses a particular challenge. Many  suspect that left unconstrained, its activity will vary unpredictably.  Despite this prediction we identify a baseline state of the normal  adult human brain in terms of the brain oxygen extraction fraction or  OEF. The OEF is defined as the ratio of oxygen used by the brain to  oxygen delivered by flowing blood and is remarkably uniform in the  awake but resting state (e.g., lying quietly with eyes closed). Local  deviations in the OEF represent the physiological basis of signals of  changes in neuronal activity obtained with functional MRI during a wide  variety of human behaviors. We used quantitative metabolic and  circulatory measurements from positron-emission tomography to obtain  the OEF regionally throughout the brain. Areas of activation were  conspicuous by their absence. All significant deviations from the mean  hemisphere OEF were increases, signifying deactivations, and resided  almost exclusively in the visual system. Defining the baseline state of  an area in this manner attaches meaning to a group of areas that  consistently exhibit decreases from this baseline, during a wide  variety of goal-directed behaviors monitored with positron-emission  tomography and functional MRI. These decreases suggest the existence of  an organized, baseline default mode of brain function that is suspended  during specific goal-directed behaviors.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/L9LRREPE/Raichle et al. - 2001 - A default mode of brain function.pdf}
 }
 
 @article{rajapakshaInsightAcrABTolCComplex2021,
@@ -1510,6 +1724,42 @@
   file = {/Users/jinko/Desktop/Research/TonB-Dependent Systems of Uropathogenic Escherichia coli- Aerobactin and Heme Transport and TonB Are Required for Virulence in the Mouse.pdf}
 }
 
+@article{westgateBoringThoughtsBored2018,
+  title = {Boring Thoughts and Bored Minds: {{The MAC}} Model of Boredom and Cognitive Engagement.},
+  shorttitle = {Boring Thoughts and Bored Minds},
+  author = {Westgate, Erin C. and Wilson, Timothy D.},
+  year = 2018,
+  month = oct,
+  journal = {Psychological Review},
+  volume = {125},
+  number = {5},
+  pages = {689--713},
+  issn = {1939-1471, 0033-295X},
+  doi = {10.1037/rev0000097},
+  urldate = {2026-01-15},
+  abstract = {What is boredom? We review environmental, attentional, and functional theories and present a new model that describes boredom as an affective indicator of unsuccessful attentional engagement in valued goal-congruent activity. According to the Meaning and Attentional Components (MAC) model, boredom is the result of (a) an attentional component, namely mismatches between cognitive demands and available mental resources, and (b) a meaning component, namely mismatches between activities and valued goals (or the absence of valued goals altogether). We present empirical support for four novel predictions made by the model: (a) Deficits in attention and meaning each produce boredom independently of the other; (b) there are different profiles of boredom that result from specific deficits in attention and meaning; (c) boredom results from two types of attentional deficits, understimulation and overstimulation; and (d) the model explains not only when and why people become bored with external activities, but also when and why people become bored with their own thoughts. We discuss further implications of the model, such as when boredom motivates people to seek interesting versus enjoyable activities.},
+  copyright = {http://www.apa.org/pubs/journals/resources/open-access.aspx},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/B9MYGXAV/Westgate and Wilson - 2018 - Boring thoughts and bored minds The MAC model of boredom and cognitive engagement..pdf}
+}
+
+@article{westgateBoringThoughtsBored2018a,
+  title = {Boring Thoughts and Bored Minds: {{The MAC}} Model of Boredom and Cognitive Engagement.},
+  shorttitle = {Boring Thoughts and Bored Minds},
+  author = {Westgate, Erin C. and Wilson, Timothy D.},
+  year = 2018,
+  month = oct,
+  journal = {Psychological Review},
+  volume = {125},
+  number = {5},
+  pages = {689--713},
+  issn = {1939-1471, 0033-295X},
+  doi = {10.1037/rev0000097},
+  urldate = {2026-01-15},
+  copyright = {http://www.apa.org/pubs/journals/resources/open-access.aspx},
+  langid = {english}
+}
+
 @book{willeyPrescottsMicrobiology2020,
   title = {Prescott's Microbiology},
   author = {Willey, Joanne M. and Prescott, Lansing M. and Sandman, Kathleen M. and Wood, Dorothy H.},
@@ -1521,6 +1771,24 @@
   langid = {english},
   annotation = {OCLC: 1039422993},
   file = {/Users/jinko/Zotero/storage/R3FZS7FS/Willey et al. - 2020 - Prescott's microbiology.pdf}
+}
+
+@article{wilsonJustThinkChallenges2014,
+  title = {Just Think: {{The}} Challenges of the Disengaged Mind},
+  shorttitle = {Just Think},
+  author = {Wilson, Timothy D. and Reinhard, David A. and Westgate, Erin C. and Gilbert, Daniel T. and Ellerbeck, Nicole and Hahn, Cheryl and Brown, Casey L. and Shaked, Adi},
+  year = 2014,
+  month = jul,
+  journal = {Science},
+  volume = {345},
+  number = {6192},
+  pages = {75--77},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.1250830},
+  urldate = {2026-01-15},
+  abstract = {Don't leave me alone with my thoughts                            Nowadays, we enjoy any number of inexpensive and readily accessible stimuli, be they books, videos, or social media. We need never be alone, with no one to talk to and nothing to do. Wilson               et al.               explored the state of being alone with one's thoughts and found that it appears to be an unpleasant experience. In fact, many of the people studied, particularly the men, chose to give themselves a mild electric shock rather than be deprived of external sensory stimuli.                                         Science               , this issue p.               75                        ,              Can we ever be alone, and would we like it if we were?           ,              In 11 studies, we found that participants typically did not enjoy spending 6 to 15 minutes in a room by themselves with nothing to do but think, that they enjoyed doing mundane external activities much more, and that many preferred to administer electric shocks to themselves instead of being left alone with their thoughts. Most people seem to prefer to be doing something rather than nothing, even if that something is negative.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/TMZCARVF/Wilson et al. - 2014 - Just think The challenges of the disengaged mind.pdf}
 }
 
 @article{worrallEvidenceMedicineEvidenceBased2007,
