--- a/index.qmd
+++ b/index.qmd
@@ -2,12 +2,8 @@
 title: "Home"
 ---
 
-Hi, my name is Jin. I'm an undergraduate studying Microbiology at [California Polytechnic State University, San Luis Obispo](https://en.wikipedia.org/wiki/California_Polytechnic_State_University,_San_Luis_Obispo). 
+I'm an undergraduate studying Microbiology at [California Polytechnic State University, San Luis Obispo](https://en.wikipedia.org/wiki/California_Polytechnic_State_University,_San_Luis_Obispo). 
 
-I'm largely interested in pathogenesis, mutualistic host-microbe relationships, and anything medicine related, but I also do some computer science (nominally) in the lab. Learn more in the [research section](research.qmd).
+I'm enjoy learning about pathogenesis, mutualistic host-microbe relationships, and anything medicine related, but I also do some computer science (nominally) in the lab. Learn more in the [research section](research.qmd).
 
 The [blog section](blog.qmd) is simply a place where I learn about whatever I want.
-
-In any case, this website should primarily serve as my central hub for thinking, a way to learn via soliloquy. Since this is on the internet, I'm also obligated to post accurate information which should aid my learning.
-
-You can contact me via email here: [jko23@calpoly.edu](mailto:jko23@calpoly.edu).
