deleted entertainment and loneliness

--- a/references.bib
+++ b/references.bib
@@ -296,6 +296,25 @@
   file = {/Users/jinko/Zotero/storage/LIEQXEXL/D. et al. - 2001 - New method for exopolysaccharide determination in culture broth using stirred ultrafiltration cells.pdf}
 }
 
+@article{davisGreaterBacterialGood2020,
+  title = {For the {{Greater}} ({{Bacterial}}) {{Good}}: {{Heterogeneous Expression}} of {{Energetically Costly Virulence Factors}}},
+  shorttitle = {For the {{Greater}} ({{Bacterial}}) {{Good}}},
+  author = {Davis, Kimberly M.},
+  editor = {Richardson, Anthony R.},
+  year = 2020,
+  month = jun,
+  journal = {Infection and Immunity},
+  volume = {88},
+  number = {7},
+  pages = {e00911-19},
+  issn = {0019-9567, 1098-5522},
+  doi = {10.1128/IAI.00911-19},
+  urldate = {2026-01-21},
+  abstract = {Bacterial populations are phenotypically heterogeneous, which allows subsets of cells to survive and thrive following changes in environmental conditions. For bacterial pathogens, changes within the host environment occur over the course of the immune response to infection and can result in exposure to host-derived, secreted antimicrobials or force direct interactions with immune cells. Many recent studies have shown host cell interactions promote virulence factor expression, forcing subsets of bacterial cells to battle the host response, while other bacteria reap the benefits of this pacification. It still remains unclear whether virulence factor expression is truly energetically costly within host tissues and whether expression is sufficient to impact the growth kinetics of virulence factor-expressing cells. However, it is clear that slow-growing subsets of bacteria emerge during infection and that these subsets are particularly difficult to eliminate with antibiotics. This minireview will focus on our current understanding of heterogenous virulence factor expression and discuss the evidence that supports or refutes the hypothesis that virulence factor expression is linked to slowed growth and antibiotic tolerance.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/IWWLJ9RN/Davis - 2020 - For the Greater (Bacterial) Good Heterogeneous Expression of Energetically Costly Virulence Factors.pdf}
+}
+
 @article{dyckLecanemabEarlyAlzheimers2023,
   title = {Lecanemab in {{Early Alzheimer}}'s {{Disease}}},
   author = {van Dyck, Christopher H. and Swanson, Chad J. and Aisen, Paul and Bateman, Randall J. and Chen, Christopher and Gee, Michelle and Kanekiyo, Michio and Li, David and Reyderman, Larisa and Cohen, Sharon and Froelich, Lutz and Katayama, Sadao and Sabbagh, Marwan and Vellas, Bruno and Watson, David and Dhadda, Shobha and Irizarry, Michael and Kramer, Lynn D. and Iwatsubo, Takeshi},
