the little prince

--- a/quotes.qmd
+++ b/quotes.qmd
@@ -43,6 +43,11 @@ title: Quotes
 
 > Only a few of us are going to be willing to break our own hearts by trading in the living beauty of imagination for the stark disappointment of words.
 
+### Antoine de Saint-Exupéry
+> It is such a secret place, the land of tears.
+
+> To me, you are still nothing more than a little boy who is just like a hundred thousand other little boys. And I have no need of you. And you, on your part, have no need of me. To you I am nothing more than a fox like a hundred thousand other foxes. But if you tame me, then we shall need each other. To me, you will be unique in all the world. To you, I shall be unique in all the world.
+
 ### J. D. Salinger
 > Many, many men have been just as troubled morally and spiritually as you are right now. Happily, some of them kept records of their troubles. You'll learn from them—if you want to. Just as someday, if you have something to offer, someone will learn something from you. It's a beautiful reciprocal arrangement. And it isn't education. It's history. It's poetry. I'm not trying to tell you that only educated and scholarly men are able to contribute something valuable to the world. It's not so. But I do say that educated and scholarly men, if they're brilliant and creative to begin with—which, unfortunately, is rarely the case—tend to leave infinitely more valuable records behind them than men do who are merely brilliant and creative. They tend to express themselves more clearly, and they usually have a passion for following their thoughts through to the end.
 
