--- a/references.bib
+++ b/references.bib
@@ -1236,6 +1236,22 @@
   file = {/Users/jinko/Zotero/storage/48HQ77N2/Mi et al. - 2016 - Dimethyl Sulfoxide Protects Escherichia coli from Rapid Antimicrobial-Mediated Killing.pdf}
 }
 
+@article{miller-ihliTraceelementDeterminationsBiologicals1988,
+  title = {Trace-Element Determinations in Biologicals Using Atomic-Absorption Spectrometry},
+  author = {{Miller-Ihli}, N.J.},
+  year = 1988,
+  month = may,
+  journal = {Journal of Research of the National Bureau of Standards},
+  volume = {93},
+  number = {3},
+  pages = {350},
+  issn = {0160-1741},
+  doi = {10.6028/jres.093.073},
+  urldate = {2026-02-03},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/JWR5PGVK/Miller-Ihli - 1988 - Trace-element determinations in biologicals using atomic-absorption spectrometry.pdf}
+}
+
 @article{millerShamProceduresEthics2004,
   title = {Sham {{Procedures}} and the {{Ethics}} of {{Clinical Trials}}},
   author = {Miller, Franklin G and Kaptchuk, Ted J},
