--- a/quotes.qmd
+++ b/quotes.qmd
@@ -7,13 +7,14 @@ title: Quotes
 
 > She just smiled, said that she loved books more than anything, and started telling him excitedly what each of the ones in her lap was about. And Ove realised that he wanted to hear her talking about the things she loved for the rest of his life.
 
+### James Baldwin
+> Love has never been a popular movement. And no one's ever wanted, really, to be free. The world is held together, really it is held together, by the love and the passion of a very few people. Otherwise, of course, you can despair. Walk down the street of any city, any afternoon, and look around you. What you've got to remember is what you're looking at is also you. Everyone you're looking at is also you. You could be that person. You could be that monster, you could be that cop. And you have to decide, in yourself, not to be.
+
 ### Anton Chekhov
 > I realized that when you love someone, your reasoning about that love should be based on what is supreme, on what is more important than happiness or unhappiness, sin or virtue, in the way that they are usually understood, otherwise it is not worth reasoning at all.
 
 ### Osamu Dazai
 > To wait. In our lives we know joy, anger, sorrow, and a hundred other emotions, but these emotions all together occupy a bare one per cent of our time. The remaining ninety-nine per cent is just living in waiting. I wait in momentary expectation, feeling as though my breasts are being crushed, for the sound in the corridor of the footsteps of happiness. Empty. Oh, life is too painful, the reality that confirms the universal belief that it is best not to be born.
-
-> As long as you love me, all I want is to spend my whole life by your side.
 
 ### F. Scott Fitzgerald
 > There are only the pursued, the pursuing, the busy and the tired.
@@ -50,10 +51,6 @@ title: Quotes
 
 ### J. D. Salinger
 > Many, many men have been just as troubled morally and spiritually as you are right now. Happily, some of them kept records of their troubles. You'll learn from them—if you want to. Just as someday, if you have something to offer, someone will learn something from you. It's a beautiful reciprocal arrangement. And it isn't education. It's history. It's poetry. I'm not trying to tell you that only educated and scholarly men are able to contribute something valuable to the world. It's not so. But I do say that educated and scholarly men, if they're brilliant and creative to begin with—which, unfortunately, is rarely the case—tend to leave infinitely more valuable records behind them than men do who are merely brilliant and creative. They tend to express themselves more clearly, and they usually have a passion for following their thoughts through to the end.
-
-> "Anyway, I like it now," I said. "I mean right now. Sitting here with you and just chewing the fat and horsing—"\
-> "That isn't anything really!"\
-> "It is so something really! Certainly it is! Why the hell isn't it? People never think anything is anything really. I'm getting goddam sick of it."
 
 ### 時雨沢 恵一
 > 結局他人の痛みなんて分かってしまえば、まともに生きていけなかったんだ。
