Added the Iron Quant Article

--- a/references.bib
+++ b/references.bib
@@ -31,6 +31,38 @@
   file = {/Users/jinko/Zotero/storage/YIZ53IK4/Abbasi and Cifu - 2024 - Why some Patients Benefit from Participating in a Sham Surgery Trial.pdf}
 }
 
+@article{abdul-tehraniFerritinMutantsEscherichia1999,
+  title = {Ferritin {{Mutants}} of {{{\emph{Escherichia}}}}{\emph{ Coli}} {{Are Iron Deficient}} and {{Growth Impaired}}, and {\emph{Fur}} {{Mutants}} Are {{Iron Deficient}}},
+  author = {{Abdul-Tehrani}, Hossein and Hudson, Aaron J. and Chang, Yung-Sheng and Timms, Andrew R. and Hawkins, Chris and Williams, John M. and Harrison, Pauline M. and Guest, John R. and Andrews, Simon C.},
+  year = 1999,
+  month = mar,
+  journal = {Journal of Bacteriology},
+  volume = {181},
+  number = {5},
+  pages = {1415--1428},
+  issn = {0021-9193, 1098-5530},
+  doi = {10.1128/JB.181.5.1415-1428.1999},
+  urldate = {2026-02-14},
+  abstract = {ABSTRACT                            Escherichia coli               contains at least two iron storage proteins, a ferritin (FtnA) and a bacterioferritin (Bfr). To investigate their specific functions, the corresponding genes (               ftnA               and               bfr               ) were inactivated by replacing the chromosomal               ftnA               and               bfr               genes with disrupted derivatives containing antibiotic resistance cassettes in place of internal segments of the corresponding coding regions. Single mutants (               ftnA::spc               and               bfr::kan               ) and a double mutant (               ftnA::spc bfr::kan               ) were generated and confirmed by Western and Southern blot analyses. The iron contents of the parental strain (W3110) and the               bfr               mutant increased by 1.5- to 2-fold during the transition from logarithmic to stationary phase in iron-rich media, whereas the iron contents of the               ftnA               and               ftnA bfr               mutants remained unchanged. The               ftnA               and               ftnA bfr               mutants were growth impaired in iron-deficient media, but this was apparent only after the mutant and parental strains had been precultured in iron-rich media. Surprisingly, ferric iron uptake regulation (               fur               ) mutants also had very low iron contents (2.5-fold less iron than Fur               +               strains) despite constitutive expression of the iron acquisition systems. The iron deficiencies of the               ftnA               and               fur               mutants were confirmed by M\"ossbauer spectroscopy, which further showed that the low iron contents of               ftnA               mutants are due to a lack of magnetically ordered ferric iron clusters likely to correspond to FtnA iron cores. In combination with the               fur               mutation,               ftnA               and               bfr               mutations produced an enhanced sensitivity to hydroperoxides, presumably due to an increase in production of ``reactive ferrous iron.'' It is concluded that FtnA acts as an iron store accommodating up to 50\% of the cellular iron during postexponential growth in iron-rich media and providing a source of iron that partially compensates for iron deficiency during iron-restricted growth. In addition to repressing the iron acquisition systems, Fur appears to regulate the demand for iron, probably by controlling the expression of iron-containing proteins. The role of Bfr remains unclear.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/AP64SUVW/Abdul-Tehrani et al. - 1999 - Ferritin Mutants of Escherichia coli Are Iron Deficient and Growth Impaired, and fur M.pdf}
+}
+
+@article{ablinModulatoryEffectsOestrogen1979,
+  title = {Modulatory Effects of Oestrogen on Immunological Responsiveness. {{II}}. {{Suppression}} of Tumour-Associated Immunity in Patients with Prostatic Cancer},
+  author = {Ablin, R J and Bhatti, R A and Guinan, P D and Khin, W},
+  year = 1979,
+  month = oct,
+  journal = {Clinical and experimental immunology},
+  volume = {38},
+  number = {1},
+  pages = {83--91},
+  issn = {1365-2249},
+  abstract = {The effect of oestrogen (diethylstilboesterol diphosphate, DES-P) on immunity to tumour-associated antigens in patients with prostatic cancer was evaluated by leucocyte adherence inhibition, a suggested in vitro correlate of cellular immunity. Significant (P smaller than 0.05) suppression of immunity to malignant prostate was observed in thirty out of thirty-one patients following pre-incubation of their leucocytes with therapeutically significant levels of DES-P. Suppression of tumour-associated immunity by exogenous oestrogen provides further evidence to earlier studies demonstrating oestrogenic suppression of non-specific cellular responsiveness evaluated by mitogen-induced lymphocytic blastogenesis, and for concern over the efficacy of oestrogenic therapy and its adverse effect in the treatment of patients with hormone-dependent tumours and responsive diseases. The reduced efficiency of immunosurveillance of tumours and underlying infectious agents may contribute to the exacerbation of disease. While speculative, these observations may also be relevant to the possible assocition between uterine cancer and prolonged administration of DES and the development of vaginal tumours in offspring found in association with maternal ingestion during pregnancy.},
+  langid = {english},
+  pmid = {93529}
+}
+
 @article{advaniStateoftheArtReviewRecurrent2025,
   title = {State-of-the-{{Art Review}}: {{Recurrent Uncomplicated Urinary Tract Infections}} in {{Women}}},
   shorttitle = {State-of-the-{{Art Review}}},
@@ -726,6 +758,13 @@
   file = {/Users/jinko/Zotero/storage/EWF4PBYX/Harden et al. - 1984 - Educational strategies in curriculum development the SPICES model.pdf}
 }
 
+@article{harveyAnalyticalChemistry21,
+  title = {Analytical {{Chemistry}} 2.1},
+  author = {Harvey, David},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/TYAPLUTW/Harvey - Analytical Chemistry 2.1.pdf}
+}
+
 @article{hidalgoInhibitionEscherichiaColi2011,
   title = {Inhibition of {{Escherichia}} Coli {{CFT073 fliC Expression}} and {{Motility}} by {{Cranberry Materials}}},
   author = {Hidalgo, Gabriela and Chan, Michelle and Tufenkji, Nathalie},
@@ -958,6 +997,13 @@
   pmcid = {PMC3135019},
   pmid = {20694026},
   file = {/Users/jinko/Zotero/storage/YN9YMXAQ/Kearns - 2010 - A field guide to bacterial swarming motility.pdf}
+}
+
+@article{kirchoff104ATOMICABSORPTION,
+  title = {10.4: {{ATOMIC ABSORPTION SPECTROSCOPY}}},
+  author = {Kirchoff, Guystav},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/5Y6RZPCN/Kirchoff - 10.4 ATOMIC ABSORPTION SPECTROSCOPY.pdf}
 }
 
 @article{kleinContactDependentInterbacterialAntagonism2020,
@@ -1267,6 +1313,20 @@
   copyright = {https://journals.sagepub.com/page/policies/text-and-data-mining-license},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/HBU4RMSE/Miller and Kaptchuk - 2004 - Sham Procedures and the Ethics of Clinical Trials.pdf}
+}
+
+@book{millsQuantitiesUnitsSymbols1993,
+  title = {Quantities, Units, and Symbols in Physical Chemistry},
+  editor = {Mills, Ian and {International Union of Pure and Applied Chemistry}},
+  year = 1993,
+  edition = {2nd ed},
+  publisher = {Blackwell Scientific Publications ; CRC Press [distributor]},
+  address = {Oxford ; Boston : Boca Raton, Fla},
+  isbn = {978-0-632-03583-0 978-0-632-03572-4},
+  langid = {english},
+  lccn = {QD451.5 .Q36 1993},
+  keywords = {Chemistry Physical and theoretical,Notation,Terminology},
+  file = {/Users/jinko/Zotero/storage/GYK27M5Y/Mills and International Union of Pure and Applied Chemistry - 1993 - Quantities, units, and symbols in physical chemistry.pdf}
 }
 
 @book{neyMetaphysicsIntroduction2014,
@@ -1937,5 +1997,9 @@
 }
 
 @book{zotero-item-322,
+  type = {Book}
+}
+
+@book{zotero-item-366,
   type = {Book}
 }
